[package]
name = "nom-date-parsers"
authors = ["Сырцев Вадим Игоревич <syrtcevvi@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"
homepage = "https://github.com/syrtcevvi/nom-date-parsers"
repository = "https://github.com/syrtcevvi/nom-date-parsers"

[dependencies]
chrono = "0.4.38"
nom = "7.1.3"
thiserror = "1.0.61"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.21.0"

[features]
full = ["numeric", "en", "ru"]
default = ["numeric", "en"]

numeric = []
ru = []
en = []
