[package]
name = "nom-date-parsers"
authors = ["Сырцев Вадим Игоревич <syrtcevvi@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "The bunch of combinators written with help of nom to parse the `numeric` and `language-specific` dates"
keywords = [
    "parsers",
    "numeric-dates",
    "language-specific",
    "nom-extension",
    "chrono-dates"
]
rust-version = "1.79"
license = "MIT"
homepage = "https://github.com/syrtcevvi/nom-date-parsers"
repository = "https://github.com/syrtcevvi/nom-date-parsers"

[features]
default = ["numeric", "en"]

numeric = []
ru = []
en = []

[dependencies]
chrono = "0.4.38"
nom = "7.1.3"
thiserror = "1.0.61"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.21.0"

[package.metadata.docs.rs]
# document all features
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-Znormalize-docs"]
rustc-args = ["--cfg", "dep_docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
