[package]
name = "nom-date-parsers"
authors = ["Сырцев Вадим Игоревич <syrtcevvi@gmail.com>"]
version = "0.2.0"
edition = "2021"
description = "The bunch of combinators written with help of nom to parse the numeric and language-specific dates"
keywords = [
    "parsers",
    "numeric-dates",
    "language-specific",
    "nom-extension",
    "chrono-dates"
]
rust-version = "1.79"
license = "MIT"
homepage = "https://github.com/syrtcevvi/nom-date-parsers"
repository = "https://github.com/syrtcevvi/nom-date-parsers"

[features]
default = ["numeric", "quick", "en"]

# Currently used for building docs for `docsrs` to add `This is supported on feature="..." only.`
nightly = []

numeric = []
quick = []
# Language-specific features
ru = []
en = []

[dependencies]
chrono = "0.4.38"
criterion = { version = "0.5.1", features = ["html_reports"] }
nom = "7.1.3"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.0"
rstest = "0.21.0"

[[bench]]
name = "ru_bundle"
required-features = ["ru"]
harness = false

[package.metadata.docs.rs]
# document all features
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-Znormalize-docs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
